--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjwr+yfKCoXIHHYedUiRPM",
+      "authorship_tag": "ABX9TyNn08WZTlVPa4u3WqdwTqix",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,19 +63,32 @@
     {
       "cell_type": "code",
       "source": [
-        "rain = input(\"今天會下雨嗎？：\")\n",
-        "if rain == Y or rain == y:\n",
+        "rain = input(\"今天會下雨嗎？\")\n",
+        "if rain == \"Y\" or rain == \"y\":\n",
         "    print(\"出門記得帶傘！\")\n",
-        "elif rain == N or rain == n:\n",
+        "elif rain == \"N\" or rain == \"n\":\n",
         "    print(\"不用帶傘！\")\n",
         "else:\n",
-        "    print(month,\"月是秋天！\")"
+        "    print(\"請重新輸入！\")"
       ],
       "metadata": {
-        "id": "eb-vs2Fhgoin"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eb-vs2Fhgoin",
+        "outputId": "a88f77c6-027b-4f2b-dffe-e650973397b0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "今天會下雨嗎？Y\n",
+            "出門記得帶傘！\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
